# d4core

./: .gitignore  LICENSE  README.md  meson.build
include/d4/: static_factory.hpp  type_traits.hpp
include/d4/actor/: actor.hpp
subprojects/: ut.wrap
tests/: static_factory.cpp
